2010-06-07  Karel Klíč  <kklic@redhat.com>

	* gui_timebarpair.py (TimeBarPair.__init__): Do not use named parameters.
	This flaw blocked Windows Python from running FlashFit.

	* NEWS: Add changes from version 0.5.

2010-06-05  Karel Klíč  <kklic@redhat.com>

	* gui_residualsgraph.py (ResidualsGraph.resizeFromData): Update to keep up with other code changes.
	Makes Time Axis Length setting to work again.
	* gui_absorbancegraph.py (AbsorbanceGraph.resizeFromData): Likewise.
	* gui_absorbancefit.py (AbsorbanceFit.resizeFromData): Likewise.

	* method_experimental.py (ModelAtoBtoC.__init__, ModelAtoB.__init__, ModelAtoBCtoD.__init__):
	New array self.parameters contains parameters settings.
	(ModelAtoBtoC.assureInitialParameters, ModelAtoB.assureInitialParameters): initialParameters
	renamed to assureInitialParameters. Set initial values only if they are not set by
	user (so only if == 0).
	(ModelAtoBCtoD.assureInitialParameters): Likewise.
	(ModelAtoBtoC.rcalc, ModelAtoB.rcalc, ModelAtoBCtoD.rcalc): Use self.parameters instead
	of a parameter.

	* gui_settings_experimental.py: Implement GUI for fixable parameters.
	Allow to setup start values for parameters.

2010-06-03  Karel Klic  <kklic@redhat.com>

	* gui_mainwindow.py: Use prefix PyQt4 every time instead of
	"from PyQt4 import QtCore, QtGui".
	Fixed call of Appearance dialog.

	* NEWS: Added news for FlashFit 0.4.

	* README: Update version to 0.4.
	* flashfit.nsis: Likewise.

2010-06-02  Karel Klíč  <kklic@redhat.com>

	* method_compatible.py (ngml): Parameter precision (sigma)
	depends on *square root* of hessianInv[i,i], not directly on it.

	Calculate a0minusAinf and ainf as C * A, do not return only A.

	* method_experimental.py (ModelAtoBtoC.rcalc): Include linear
	part to C.
	(ModelAtoBCtoD.rcalc, ModelAtoB.rcalc): Likewise.

	* gui_settings_experimental.py (Tab): New file, new class.
	Good old A->B->C (A->B+C->D, A->B) radio buttons, and Fit button.
