@@ -1,4 +1,14 @@
 *~
 *.pyc
 *.csv
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache
+config.log
+config.status
+configure
+install-sh
+missing
+py-compile
 docs/*.html
