@@ -7,24 +7,22 @@
 !include "LogicLib.nsh"
 !include "WordFunc.nsh"
 
-!define VERSION "0.5"
-
 ; The name of the installer
-Name "FlashFit ${VERSION}"
-Caption "FlashFit ${VERSION}"
+Name "FlashFit ${PACKAGE_VERSION}"
+Caption "FlashFit ${PACKAGE_VERSION}"
 
 ; The file to write
-OutFile "flashfit-${VERSION}.exe"
+OutFile "flashfit-${PACKAGE_VERSION}.exe"
 
 ;Interface Settings
 !define MUI_ABORTWARNING
 
 ; The default installation directory
-InstallDir $PROGRAMFILES\FlashFit-${VERSION}
+InstallDir $PROGRAMFILES\FlashFit-${PACKAGE_VERSION}
 
 ; Registry key to check for directory (so if you install again, it will 
 ; overwrite the old one automatically)
-InstallDirRegKey HKLM "Software\FlashFit${VERSION}" "Install_Dir"
+InstallDirRegKey HKLM "Software\FlashFit${PACKAGE_VERSION}" "Install_Dir"
 
 SetCompressor zlib
 
@@ -36,7 +34,7 @@ RequestExecutionLevel admin
 !insertmacro MUI_PAGE_WELCOME
 !insertmacro MUI_PAGE_DIRECTORY
 !insertmacro MUI_PAGE_INSTFILES
-;!define MUI_FINISHPAGE_RUN "$INSTDIR\main.pyw"
+;!define MUI_FINISHPAGE_RUN "$INSTDIR\flashfit.pyw"
 !define MUI_FINISHPAGE_NOREBOOTSUPPORT
 !insertmacro MUI_PAGE_FINISH
 
@@ -57,22 +55,22 @@ Section "FlashFit (required)"
   
   SetOverwrite on
   File "*.py"
-  File /oname=main.pyw "main.py"
+  File /oname=flashfit.pyw "flashfit.py"
   File "AUTHORS"
   File "COPYING"
   File "NEWS"
   File "README"
   
   ; Write the installation path into the registry
-  WriteRegStr HKLM "SOFTWARE\FlashFit${VERSION}" "Install_Dir" "$INSTDIR"
+  WriteRegStr HKLM "SOFTWARE\FlashFit${PACKAGE_VERSION}" "Install_Dir" "$INSTDIR"
   
   ; Write the uninstall keys for Windows
-  WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${VERSION}" "DisplayName" "FlashFit ${VERSION}"
-  WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${VERSION}" "UninstallString" '"$INSTDIR\uninstall.exe"'
-  WriteRegExpandStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${VERSION}" "InstallLocation" "$INSTDIR"
-  WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit$${VERSION}" "DisplayVersion" "${VERSION}"
-  WriteRegDWORD HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${VERSION}" "NoModify" 1
-  WriteRegDWORD HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${VERSION}" "NoRepair" 1
+  WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${PACKAGE_VERSION}" "DisplayName" "FlashFit ${PACKAGE_VERSION}"
+  WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${PACKAGE_VERSION}" "UninstallString" '"$INSTDIR\uninstall.exe"'
+  WriteRegExpandStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${PACKAGE_VERSION}" "InstallLocation" "$INSTDIR"
+  WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit$${PACKAGE_VERSION}" "DisplayVersion" "${PACKAGE_VERSION}"
+  WriteRegDWORD HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${PACKAGE_VERSION}" "NoModify" 1
+  WriteRegDWORD HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${PACKAGE_VERSION}" "NoRepair" 1
   WriteUninstaller "uninstall.exe"
 SectionEnd
 
@@ -81,9 +79,9 @@ SectionEnd
 ;
 Section "Start Menu Shortcuts"
   SetShellVarContext all
-  CreateDirectory "$SMPROGRAMS\FlashFit ${VERSION}"
-  CreateShortCut  "$SMPROGRAMS\FlashFit ${VERSION}\Uninstall.lnk" "$INSTDIR\uninstall.exe"
-  CreateShortCut  "$SMPROGRAMS\FlashFit ${VERSION}\FlashFit.lnk" "$INSTDIR\main.pyw"
+  CreateDirectory "$SMPROGRAMS\FlashFit ${PACKAGE_VERSION}"
+  CreateShortCut  "$SMPROGRAMS\FlashFit ${PACKAGE_VERSION}\Uninstall.lnk" "$INSTDIR\uninstall.exe"
+  CreateShortCut  "$SMPROGRAMS\FlashFit ${PACKAGE_VERSION}\FlashFit.lnk" "$INSTDIR\main.pyw"
 SectionEnd
 
 ;===============================================================================
@@ -91,8 +89,8 @@ SectionEnd
 ;
 Section Uninstall
   ; Remove registry keys
-  DeleteRegKey HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${VERSION}"
-  DeleteRegKey HKLM "Software\Vectronix\FlashFit${VERSION}"
+  DeleteRegKey HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FlashFit${PACKAGE_VERSION}"
+  DeleteRegKey HKLM "Software\FlashFit\FlashFit${PACKAGE_VERSION}"
 
   ; Remove files and uninstaller
   Delete "$INSTDIR\*.py"
@@ -106,8 +104,8 @@ Section Uninstall
 
   ; Remove shortcuts, if any
   SetShellVarContext all
-  Delete "$SMPROGRAMS\FlashFit ${VERSION}\*.*"
-  RMDir "$SMPROGRAMS\FlashFit ${VERSION}"
+  Delete "$SMPROGRAMS\FlashFit ${PACKAGE_VERSION}\*.*"
+  RMDir "$SMPROGRAMS\FlashFit ${PACKAGE_VERSION}"
 
   ; Remove directories used
   RMDir $INSTDIR
