@@ -1,0 +1,3 @@
+EXTRA_DIST = gen_ab_cd.py gen_abc.py gen_ab.py frange.py
+
+CLEANFILES := $(notdir $(wildcard *~)) $(notdir $(wildcard *\#)) $(notdir $(wildcard \.\#*)) $(notdir $(wildcard *.pyc))
